# zxing-cpp

test/runners/qt/: CMakeLists.txt  TestReaderMain.cpp
wrappers/qt/: BarcodeReader.cpp  BarcodeReader.h  CMakeLists.txt
